<resources>
    <string name="app_name">NutriFood</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="altura">Altura</string>
    <string name="m">m</string>
    <string name="_1_60">1.60</string>
    <string name="peso">Peso</string>
    <string name="_62_5">62.5</string>
    <string name="kg">Kg</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="calcular">Calcular</string>
    <string name="idade">Idade</string>
    <string name="_18">18</string>
    <string name="anos">Anos</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="imc_classifica_o"><![CDATA[IMC & Classificação]]></string>
    <string name="resultado">Resultado</string>
    <string name="informa_es">Informações</string>
    <string name="peso_atual">Peso Atual:</string>
    <string name="sexo">Sexo</string>
    <string name="indefinido">Indefinido</string>
    <string name="faixa_etaria">Faixa Etaria</string>
    <string name="conta">Conta</string>
    <string name="entrar">Entrar</string>
    <string name="alarmes">Alarmes</string>
    <string name="e_mail">E-mail</string>
    <string name="status">Status</string>
    <string name="title_activity_login">Entrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (opcional)</string>
    <string name="action_sign_in">Entrar ou se Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email Inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Senha Incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="alimentos">Alimentos</string>
    <string name="nao_tem_uma_conta_cadastre_se_aqui">Nao tem uma conta? Cadastre-se aqui.</string>
    <string name="entrar_ou_se_cadastrar">Entrar ou se Cadastrar</string>
    <string name="orienta_o_nutricional">Orientação Nutricional</string>
    <string name="c_lculo_avan_ado">Cálculo Avançado</string>
    <string name="c_lculo_imc">Cálculo IMC</string>
    <string name="editar">Editar</string>
    <string name="adicionar_alimento">Adicionar Alimento</string>
</resources>
