<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/balanca"
            android:title="@string/c_lculo_imc" />
        <item
            android:id="@+id/nav_profi"
            android:icon="@drawable/calculator"
            android:title="@string/c_lculo_avan_ado" />
        <item
            android:id="@+id/nav_orientacao"
            android:icon="@drawable/ingredients"
            android:title="@string/orienta_o_nutricional" />
        <item
            android:id="@+id/nav_alarme"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/alarmes" />
        <item
            android:id="@+id/nav_alimentos"
            android:icon="@drawable/apple"
            android:title="@string/alimentos" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/editar" />
        <item
            android:id="@+id/nav_Add_fruta"
            android:icon="@drawable/adddatabase"
            android:title="@string/adicionar_alimento" />
    </group>

    <item android:title="@string/conta"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/nav_entrar"
                android:icon="@android:drawable/ic_input_add"
                android:title="@string/entrar_ou_se_cadastrar" />
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/profile"
                android:title="@string/informa_es" />
        </menu>
    </item>

</menu>
